[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/TinyRanch_Structures.png" type="Texture" id=1]
[ext_resource path="res://valuables/turrets/turret.gd" type="Script" id=2]
[ext_resource path="res://player/store_house/bullet/bullet.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="CircleShape2D" id=2]
radius = 106.0

[node name="turret" type="Node2D" groups=["turret", "valuables"]]
scale = Vector2( 2, 2 )
z_index = 1
z_as_relative = false
script = ExtResource( 2 )
bullet_scene = ExtResource( 3 )

[node name="bullets" type="Node2D" parent="."]

[node name="sprite" type="Sprite" parent="."]
region_rect = Rect2( 24, 24, 0, 0 )

[node name="stage_1" type="Sprite" parent="sprite"]
position = Vector2( 0, -8 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 32, 16, 16, 16 )

[node name="hitbox" type="Area2D" parent="."]
position = Vector2( 0, -8 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource( 1 )

[node name="reload_time" type="Timer" parent="."]

[node name="detection" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection"]
shape = SubResource( 2 )

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_exited" from="hitbox" to="." method="_on_hitbox_area_exited"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="timeout" from="reload_time" to="." method="_on_reload_time_timeout"]
[connection signal="area_entered" from="detection" to="." method="_on_detection_area_entered"]
[connection signal="area_exited" from="detection" to="." method="_on_detection_area_exited"]
